# exam-tp-info

./: README.md
fake-copies/copy/: .name.cfg  question1-part1.cpp
fake-copies/session-1/room-A/copy-mach1/: .name.cfg
fake-copies/session-1/room-A/copy-mach2/: .name.cfg  part2.cpp  question1-part2.cpp
fake-copies/session-1/room-A/copy-mach3/: .name.cfg
fake-copies/session-1/room-B/copy-mach4/: .name.cfg  part1.hpp  part2.cpp
fake-copies/session-1/room-B/copy-mach5/: .name.cfg  part1.hpp
fake-copies/session-2/room-A/copy-mach1/: .name.cfg
fake-copies/session-2/room-A/copy-mach2/: .name.cfg
fake-copies/session-2/room-B/copy-mach4/: .name.cfg  part1.hpp  part2.cpp  part2.hpp
fake-copies/session-2/room-B/copy-mach5/: .name.cfg  part2.hpp
fake-copies/session-2/room-B/copy-mach6/: .name.cfg  part2.hpp
fake-copies/session-2/room-C/copy-mach10/: .name.cfg
fake-copies/session-2/room-C/copy-mach11/: .name.cfg  part2.cpp
fake-subject-database/lists/: part.hpp  question1.cpp  question2.cpp
fake-subject-database/vectors/: part.cpp  part.hpp  question1.cpp  question2.cpp
libraries/tpinf/: instructions.tex  pyproject.toml  setup.py
libraries/tpinf/tpinf/: __init__.py  correction.py  marks.py  workspace.py
libraries/tpinf/tpinf/scripts/: tpinf-list-copies.py  tpinf-make-subject.py  tpinf-make-testable-source.py  tpinf_list_questions.py  tpinf_make_exam_archive.py  tpinf_make_exam_source.py  tpinf_make_report.py  tpinf_read_copies.py
