[project]
name = "tpinf"
version = "1.0"
dependencies = ['numpy', 'matplotlib']

[project.scripts]
tpinf-read-copies = "tpinf.scripts.tpinf_read_copies:main"
tpinf-make-testable-source = "tpinf.scripts.tpinf_make_testable_sources:main"
tpinf-make-subject = "tpinf.scripts.tpinf_make_subject:main"
tpinf-make-report = "tpinf.scripts.tpinf_make_report:main"
tpinf-make-exam-source = "tpinf.scripts.tpinf_make_exam_source:main"
tpinf-make-exam-archive = "tpinf.scripts.tpinf_make_exam_archive:main"
tpinf-make-list-questions = "tpinf.scripts.tpinf_make_list_questions:main"
tpinf-make-list-copies = "tpinf.scripts.tpinf_make_list_copies:main"

